# take-home-task

./: .gitignore  IMPLEMENTATION_NOTES.md  PROJECT_README.md  README.md  check_airflow_version.py  compare_pipelines.py  data_gen.py  debug_inverse_transform.py  debug_pipeline.py  debug_pipeline_v0.py  debug_task_size.py  deploy_standalone_dag.py  generate_large_dataset.py  grid.py  optimize_spark_performance.py  performance_monitor.py  performance_test.py  performance_test_final.py  pyproject.toml  requirements.txt  run.py  setup_airflow_dags.py  sp_test.py  spark_test.py  test_dag_syntax.py  test_formatting_fix.py  test_installation.py  test_large_optimized.py  test_optimizations.py  test_precision_fix.py  test_simple_dag.py  test_spark_fix.py  test_spark_optimized_dag.py  test_working_dag.py
airflow_dags/: bd_transformer_pipeline.py  spark_monitoring_config.yaml  spark_pipeline_dag.py  spark_transformer_dag.py  test_dag.py
bd_transformer/: consts.py  spark_transformer.py  spark_transformer_airflow.py  transformer.py
results/: detailed_results_20250806_154742.json  detailed_results_20250806_163840.json  detailed_results_20250806_181737.json  detailed_results_20250806_182725.json  detailed_results_20250806_204222.json  detailed_results_20250806_210123.json  detailed_results_20250806_221212.json  detailed_results_20250806_232557.json  pandas_continuous_metrics.json  perf_metrics.json  performance_results.json  pipeline_results.json  spark_continuous_metrics.json  spark_ui_metrics_20250806_154742.json  summary.json  (+15 more)
results(pt & par =300)/: performance_results.json
(+13 files in other folders)
